--- a/WebAppRest/src/main/webapp/template/show-person-hp-template.html
+++ b/WebAppRest/src/main/webapp/template/show-person-hp-template.html
@@ -3,7 +3,7 @@
 	<a href="#" class="btn"><i class="icon-arrow-left"></i> Back to person list</a>
 	<br/><br/>
 	<div style="position:relative;text-align:center;">
-		<h2>
+		<h2 style="font-family: serif;">
 			<%= person.get('firstname') + " " + person.get('lastname') %>
 			<%= " (" + person.get('birthdate') + ")" %>
 		</h2>
