--- a/WebAppRest/src/main/webapp/css/circular-carousel.css
+++ b/WebAppRest/src/main/webapp/css/circular-carousel.css
@@ -106,7 +106,8 @@
 	height:440px;
 	top:5px;
 	text-align:left;
-	z-index:10000;
+	/*z-index:10000;*/
+	z-index:1;
 	overflow:hidden;
 }
 .ca-content{
